--- a/.travis.yml
+++ b/.travis.yml
@@ -1,72 +1,32 @@
-# Default configuration for use with tic package
-# tic documentation to get started: https://ropenscilabs.github.io/tic/
-
-# DO NOT CHANGE THE CODE BELOW
-before_install:
-  - R -q -e 'if (!requireNamespace("remotes")) install.packages("remotes")'
-  - R -q -e 'if (getRversion() < "3.2" && !requireNamespace("curl")) install.packages("curl")'
-  - R -q -e 'remotes::install_github("ropenscilabs/tic", upgrade = "always"); print(tic::dsl_load()); tic::prepare_all_stages()'
-  - R -q -e 'tic::before_install()'
-install: R -q -e 'tic::install()'
-before_script: R -q -e 'tic::before_script()'
-script: R -q -e 'tic::script()'
-after_success: R -q -e 'tic::after_success()'
-after_failure: R -q -e 'tic::after_failure()'
-before_deploy: R -q -e 'tic::before_deploy()'
-deploy:
-  provider: script
-  script: R -q -e 'tic::deploy()'
-  on:
-    all_branches: true
-after_deploy: R -q -e 'tic::after_deploy()'
-after_script: R -q -e 'tic::after_script()'
-# DO NOT CHANGE THE CODE ABOVE
-
-language: r
+language: R
 dist: bionic
 cache:
   - packages
   - $HOME/.ccache
 latex: false
 
+addons:
+  apt:
+    packages:
+      - libudunits2-dev
+      - libgdal-dev
+
+r_packages:
+  - caret
+
 env:
   global:
   - MAKEFLAGS="-j 2"
 
-#stages: smoke, full
-stages:
-- name: test
-- name: full
-  if: branch = master
-
-#jobs
 jobs:
   include:
-  - stage: test
-    r: devel
-  - stage: full
-    r: release
-    env:
-    - BUILD_PKGDOWN=true
-  - os: osx
-    r: release
+  - r: devel
+  - r: release
+    after_success: Rscript -e 'covr::codecov()'
+    before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
+    deploy:
+      provider: script
+      script: Rscript -e 'pkgdown::deploy_site_github()'
+      skip_cleanup: true
   - r: oldrel
-
-#matrix: Early abortion of failed builds
-matrix:
   fast_finish: true
-
-before_deploy:
-  - Rscript -e 'remotes::install_cran("prettydoc")'
-
-after_success:
-  - Rscript -e 'covr::codecov()'
-
-addons:
-  apt:
-    packages:
-     - libudunits2-dev
-     - libgdal-dev
-
-r_packages:
-  - caret
