--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,9 @@ export(lookup_and_replace)
 export(pop_register)
 export(sample_choice)
 export(unnest_datatable)
+export(use_event)
+export(use_module)
+export(use_scenario)
 import(R6)
 import(assertthat)
 import(data.table)
