update NAMESPACE importFrom

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ import(R6)
 import(assertthat)
 import(data.table)
 import(glue)
+importFrom(fs,path)
 importFrom(furrr,future_map_dfr)
 importFrom(furrr,future_options)
 importFrom(here,here)
@@ -75,4 +76,6 @@ importFrom(purrr,map2_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
+importFrom(usethis,use_directory)
+importFrom(usethis,use_template)
 importFrom(utils,packageVersion)
