--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,10 @@ export(create_new_module)
 export(create_toy_population)
 export(create_toy_world)
 export(dm_get_model)
+export(dm_input_dir)
+export(dm_output_dir)
 export(dm_ref)
+export(dm_scenario_dir)
 export(element_wise_expand_lists)
 export(generate_population)
 export(household_formation)
