update onLoad options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ import(R6)
 import(assertthat)
 import(data.table)
 import(glue)
+importFrom(fs,dir_create)
 importFrom(fs,path)
 importFrom(furrr,future_map_dfr)
 importFrom(furrr,future_options)
