--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(dm_get_model)
 export(dm_input_dir)
 export(dm_output_dir)
 export(dm_ref)
+export(dm_save)
 export(dm_scenario_dir)
 export(element_wise_expand_lists)
 export(generate_population)
@@ -58,6 +59,12 @@ import(R6)
 import(assertthat)
 import(data.table)
 import(glue)
+importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_li)
+importFrom(cli,cli_text)
+importFrom(cli,rule)
+importFrom(cli,symbol)
 importFrom(fs,dir_create)
 importFrom(fs,path)
 importFrom(furrr,future_map_dfr)
