add set_active_scenario #10

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,16 +33,14 @@ export(TransitionClassification)
 export(TransitionRegression)
 export(World)
 export(Zone)
+export(active_scenario)
 export(alignment)
 export(assign_reference)
 export(create_toy_population)
 export(create_toy_world)
 export(dm_get_model)
-export(dm_input_dir)
-export(dm_output_dir)
 export(dm_ref)
 export(dm_save)
-export(dm_scenario_dir)
 export(element_wise_expand_lists)
 export(generate_population)
 export(household_formation)
@@ -51,6 +49,7 @@ export(is_scheduled)
 export(lookup_and_replace)
 export(pop_register)
 export(sample_choice)
+export(set_active_scenario)
 export(unnest_datatable)
 export(use_event)
 export(use_module)
