--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,13 +36,20 @@ export(Zone)
 export(active_scenario)
 export(alignment)
 export(assign_reference)
+export(check_module)
+export(check_module_version)
 export(create_toy_population)
 export(create_toy_world)
 export(dm_get_model)
 export(dm_ref)
 export(dm_save)
+export(download_module)
 export(element_wise_expand_lists)
 export(generate_population)
+export(get_all_module_files)
+export(get_module_files)
+export(get_module_versions)
+export(get_modules)
 export(household_formation)
 export(is_dymium_class)
 export(is_scheduled)
@@ -86,4 +93,5 @@ importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(usethis,use_directory)
 importFrom(usethis,use_template)
+importFrom(utils,download.file)
 importFrom(utils,packageVersion)
