--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ LazyData: true
 Depends:
     R (>= 3.5.0)
 Imports:
-    R6 (>= 2.2.2),
+    R6 (>= 2.3.0),
     data.table (>= 1.12.0),
     checkmate (>= 1.9.4),
     assertthat (>= 0.2.0),
@@ -25,13 +25,14 @@ Imports:
     furrr (>= 0.1.0),
     lest (>= 1.0.0),
     lgr (>= 0.3.3),
-    glue,
+    glue (>= 1.3.0),
     methods,
     modules (>= 0.8.0),
     here (>= 0.1.0),
-    usethis,
-    cli,
-    fs
+    usethis (>= 1.5.0),
+    cli (>= 1.9.9),
+    fs (>= 1.3.0),
+    httr (>= 1.4.0)
 Suggests:
     testthat (>= 2.1.0),
     fastmatch (>= 1.1.0),
