--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,9 @@ importFrom(cli,rule)
 importFrom(cli,symbol)
 importFrom(fs,dir_create)
 importFrom(fs,path)
+importFrom(fs,path_ext)
+importFrom(fs,path_ext_remove)
+importFrom(fs,path_ext_set)
 importFrom(furrr,future_map_dfr)
 importFrom(furrr,future_options)
 importFrom(here,here)
