--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,7 @@ Imports:
     modules (>= 0.8.0),
     here (>= 0.1.0),
     usethis (>= 1.5.0),
-    cli (>= 1.9.9),
+    cli,
     fs (>= 1.3.0),
     httr (>= 1.4.0)
 Suggests:
@@ -44,7 +44,7 @@ Suggests:
     knitr,
     rmarkdown
 Remotes:
-  github::dymium-org/dymiumCore
+  github::r-lib/cli
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.1
 VignetteBuilder: knitr
