rename utils scripts to have utils- prefix.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -80,20 +80,20 @@ Collate:
     'Zone.R'
     'alignment.R'
     'checks.R'
-    'class-utils.R'
     'constants.R'
     'create-world.R'
     'data.R'
     'dymiumCore-package.R'
-    'event-helpers.R'
     'generate-data.R'
     'household-formation.R'
     'module.R'
     'population-register.R'
     'sampling.R'
-    'save.R'
-    'scenario-utils.R'
     'scheduler.R'
     'usethis.R'
+    'utils-class.R'
+    'utils-event.R'
+    'utils-pipeline.R'
+    'utils-scenario.R'
     'utils.R'
     'zzz.R'
