--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,15 +38,17 @@ export(alignment)
 export(assign_reference)
 export(check_module)
 export(check_module_version)
+export(check_required_models)
+export(check_supported_model)
 export(create_toy_population)
 export(create_toy_world)
 export(dm_get_model)
-export(dm_ref)
 export(dm_save)
 export(download_module)
 export(element_wise_expand_lists)
 export(generate_population)
 export(get_all_module_files)
+export(get_models)
 export(get_module_files)
 export(get_module_versions)
 export(get_modules)
