--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,27 +33,51 @@ export(TransitionClassification)
 export(TransitionRegression)
 export(World)
 export(Zone)
+export(active_scenario)
 export(alignment)
 export(assign_reference)
-export(create_new_event)
-export(create_new_module)
+export(check_module)
+export(check_module_version)
+export(check_required_models)
+export(check_supported_model)
 export(create_toy_population)
 export(create_toy_world)
 export(dm_get_model)
-export(dm_ref)
+export(dm_save)
+export(download_module)
 export(element_wise_expand_lists)
 export(generate_population)
+export(get_all_module_files)
+export(get_models)
+export(get_module_files)
+export(get_module_versions)
+export(get_modules)
 export(household_formation)
 export(is_dymium_class)
 export(is_scheduled)
 export(lookup_and_replace)
 export(pop_register)
 export(sample_choice)
+export(set_active_scenario)
 export(unnest_datatable)
+export(use_event)
+export(use_module)
+export(use_scenario)
 import(R6)
 import(assertthat)
 import(data.table)
 import(glue)
+importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_li)
+importFrom(cli,cli_text)
+importFrom(cli,rule)
+importFrom(cli,symbol)
+importFrom(fs,dir_create)
+importFrom(fs,path)
+importFrom(fs,path_ext)
+importFrom(fs,path_ext_remove)
+importFrom(fs,path_ext_set)
 importFrom(furrr,future_map_dfr)
 importFrom(furrr,future_options)
 importFrom(here,here)
@@ -72,4 +96,7 @@ importFrom(purrr,map2_int)
 importFrom(purrr,map_lgl)
 importFrom(purrr,walk)
 importFrom(purrr,walk2)
+importFrom(usethis,use_directory)
+importFrom(usethis,use_template)
+importFrom(utils,download.file)
 importFrom(utils,packageVersion)
