--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ LazyData: true
 Depends:
     R (>= 3.5.0)
 Imports:
-    R6 (>= 2.2.2),
+    R6 (>= 2.3.0),
     data.table (>= 1.12.0),
     checkmate (>= 1.9.4),
     assertthat (>= 0.2.0),
@@ -25,10 +25,12 @@ Imports:
     furrr (>= 0.1.0),
     lest (>= 1.0.0),
     lgr (>= 0.3.3),
-    glue,
-    methods,
-    modules (>= 0.8.0),
-    here (>= 0.1.0)
+    glue (>= 1.3.0),
+    here (>= 0.1.0),
+    usethis (>= 1.5.0),
+    cli,
+    fs (>= 1.3.0),
+    httr (>= 1.4.0)
 Suggests:
     testthat (>= 2.1.0),
     fastmatch (>= 1.1.0),
@@ -36,9 +38,14 @@ Suggests:
     pryr (>= 0.1.4),
     sf (>= 0.8),
     covr,
-    mapview
-Roxygen: list(markdown = TRUE, r6 = FALSE)
+    mapview,
+    knitr,
+    rmarkdown
+Remotes:
+  github::r-lib/cli
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.1
+VignetteBuilder: knitr
 Collate: 
     'Generic.R'
     'History.R'
@@ -73,19 +80,20 @@ Collate:
     'Zone.R'
     'alignment.R'
     'checks.R'
-    'class-utils.R'
     'constants.R'
     'create-world.R'
     'data.R'
     'dymiumCore-package.R'
-    'event-helpers.R'
     'generate-data.R'
     'household-formation.R'
     'module.R'
     'population-register.R'
     'sampling.R'
-    'save.R'
     'scheduler.R'
-    'templates.R'
+    'usethis.R'
+    'utils-class.R'
+    'utils-event.R'
+    'utils-pipeline.R'
+    'utils-scenario.R'
     'utils.R'
     'zzz.R'
