add initial versions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -67,12 +67,15 @@ Collate:
     'Individual.R'
     'Household.R'
     'Log.R'
+    'Market.R'
     'MatchingMarket.R'
     'MatchingMarketOptimal.R'
     'MatchingMarketStochastic.R'
     'Model.R'
     'Population.R'
     'Pipeline.R'
+    'SearchStrategy.R'
+    'SelectStrategy.R'
     'Transition.R'
     'TransitionClassification.R'
     'TransitionRegression.R'
