--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,15 @@ export(Generic)
 export(History)
 export(Household)
 export(Individual)
+export(Market)
 export(MatchingMarket)
 export(MatchingMarketOptimal)
 export(MatchingMarketStochastic)
 export(Model)
 export(Pipeline)
 export(Population)
+export(SearchStrategy)
+export(SelectStrategy)
 export(SupportedTransitionModels)
 export(Transition)
 export(TransitionClassification)
