--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,7 @@ Suggests:
     rmarkdown
 Remotes:
   github::r-lib/cli
-Roxygen: list(markdown = TRUE)
+Roxygen: list(markdown = TRUE, r6 = FALSE)
 RoxygenNote: 7.0.1
 VignetteBuilder: knitr
 Collate: 
