--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Imports:
     glue (>= 1.3.0),
     here (>= 0.1.0),
     usethis (>= 1.5.0),
-    cli,
+    cli (>= 2.0.0),
     fs (>= 1.3.0),
     httr (>= 1.4.0)
 Suggests:
@@ -41,8 +41,6 @@ Suggests:
     mapview,
     knitr,
     rmarkdown
-Remotes:
-  github::r-lib/cli
 Roxygen: list(markdown = TRUE, r6 = FALSE)
 RoxygenNote: 7.0.1
 VignetteBuilder: knitr
