variables with . prefix in attribute data are derived variables
- Agent and DataBackendDataTable allow new data to be added without having derived variables. When added, the derived variables cells of the newdata will be filled with NAs.
- Add `omit_derived_vars()` and `normalise_derived_vars()` to facilitate when working with derived variables.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,8 @@ export(household_formation)
 export(is_dymium_class)
 export(is_scheduled)
 export(lookup_and_replace)
+export(normalise_derived_vars)
+export(omit_derived_vars)
 export(pop_register)
 export(sample_choice)
 export(set_active_scenario)
