--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -83,6 +83,8 @@ reference:
     - generate_population
 - title: "Miscellaneous"
   contents:
+  - omit_derived_vars
+  - normalise_derived_vars
   - sample_choice
   - lookup_and_replace
   - condense_rows
