--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(unnest_datatable)
 export(use_event)
 export(use_module)
 export(use_scenario)
+export(validate_linkages)
 import(R6)
 import(assertthat)
 import(data.table)
