fix: only import required functions from the `glue` package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,7 +69,6 @@ export(validate_linkages)
 import(R6)
 import(assertthat)
 import(data.table)
-import(glue)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_li)
@@ -83,6 +82,9 @@ importFrom(fs,path_ext_remove)
 importFrom(fs,path_ext_set)
 importFrom(furrr,future_map_dfr)
 importFrom(furrr,future_options)
+importFrom(glue,glue)
+importFrom(glue,glue_col)
+importFrom(glue,glue_collapse)
 importFrom(here,here)
 importFrom(lest,case_when)
 importFrom(magrittr,"%>%")
