--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(MatchingMarket)
 export(MatchingMarketOptimal)
 export(MatchingMarketStochastic)
 export(Model)
+export(Network)
 export(Pipeline)
 export(Population)
 export(SupportedTransitionModels)
