--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(TransitionRegression)
 export(World)
 export(Zone)
 export(active_scenario)
+export(add_history)
 export(alignment)
 export(assign_reference)
 export(check_module)
