--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: dymiumCore
 Type: Package
 Title: The core functions of a Dynamic Microsimulation framework for Integrated Urban Models
-Version: 0.0.11.3
+Version: 0.0.11.4
 Authors@R: c(
     person("Amarin", "Siripanich", email = "amarin@dymium.org", role = c("aut", "cre")),
     person("Taha", "Rashidi", role = c("aut")))
@@ -47,7 +47,6 @@ RoxygenNote: 7.0.2
 VignetteBuilder: knitr
 Collate: 
     'Generic.R'
-    'History.R'
     'Entity.R'
     'Agent.R'
     'Asset.R'
@@ -61,6 +60,7 @@ Collate:
     'DataBackendDataFrame.R'
     'DataBackendDataTable.R'
     'DataBackendSpatialFeature.R'
+    'Entity-functions.R'
     'Environment.R'
     'Firm.R'
     'Individual.R'
