--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ export(Entity)
 export(Environment)
 export(Firm)
 export(Generic)
-export(History)
 export(Household)
 export(Individual)
 export(MatchingMarket)
@@ -35,6 +34,7 @@ export(TransitionRegression)
 export(World)
 export(Zone)
 export(active_scenario)
+export(add_history)
 export(alignment)
 export(assign_reference)
 export(check_module)
