--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(set_active_scenario)
 export(unnest_datatable)
 export(use_event)
 export(use_module)
+export(use_module_readme)
 export(use_scenario)
 export(validate_linkages)
 import(R6)
