--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,24 @@ latex: false
 
 addons:
   apt:
+    update: true
     packages:
       - libudunits2-dev
       - libgdal-dev
+      - libproj-dev
+      - libgeos-dev
+      - libfreetype6
+      - libmagick++-dev
+      - cargo
+      - libavfilter-dev
+    sources:
+      - sourceline: 'ppa:jonathonf/ffmpeg-4'
+      - sourceline: 'ppa:jonathonf/ffmpeg-3'
+
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
+  - sudo apt-get --yes --force-yes update -qq
+  - Rscript -e 'update.packages(ask = FALSE)'
 
 r_packages:
   - caret
@@ -18,6 +33,7 @@ r_packages:
 env:
   global:
   - MAKEFLAGS="-j 2"
+  - _R_CHECK_FORCE_SUGGESTS_=false
 
 deploy.skip_cleanup: true
 
@@ -26,7 +42,7 @@ jobs:
   - r: devel
   - r: release
     after_success: Rscript -e 'covr::codecov()'
-    before_deploy: Rscript -e 'remotes::install_cran("pkgdown")'
+    before_deploy: Rscript -e 'remotes::install_cran("pkgdown"); remotes::install_cran("prettydoc")'
     deploy:
       provider: script
       script: Rscript -e 'pkgdown::deploy_site_github()'
