--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: r
 os: linux
 dist: bionic
+sudo: true
 cache:
   - packages
   - $HOME/.ccache
@@ -10,10 +11,6 @@ addons:
   apt:
     update: true
     packages:
-      - libudunits2-dev
-      - libgdal-dev
-      - libproj-dev
-      - libgeos-dev
       - libfreetype6
       - libmagick++-dev
       - cargo
@@ -25,6 +22,7 @@ addons:
 before_install:
   - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable --yes
   - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
   - Rscript -e 'update.packages(ask = FALSE)'
 
 r_packages:
