refactor: moved the inspect function into Entity-funtioncs.R

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(get_module_files)
 export(get_module_versions)
 export(get_modules)
 export(household_formation)
+export(inspect)
 export(is_dymium_class)
 export(is_scheduled)
 export(lookup_and_replace)
