feat: create a Transition function  that wraps its R6 classes #27

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -62,6 +62,7 @@ export(omit_derived_vars)
 export(pop_register)
 export(sample_choice)
 export(set_active_scenario)
+export(transition)
 export(unnest_datatable)
 export(use_event)
 export(use_module)
