--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(dm_save)
 export(download_module)
 export(element_wise_expand_lists)
 export(get_all_module_files)
+export(get_history)
 export(get_models)
 export(get_module_files)
 export(get_module_versions)
