--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(check_module)
 export(check_module_version)
 export(check_required_models)
 export(check_supported_model)
+export(combine_histories)
 export(create_toy_population)
 export(create_toy_world)
 export(dm_get_model)
