--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(get_history,Container)
 S3method(get_history,Entity)
+S3method(get_log,Container)
+S3method(get_log,Generic)
 export("%>%")
 export(.get_sim_time)
 export(Agent)
@@ -52,6 +54,7 @@ export(download_module)
 export(element_wise_expand_lists)
 export(get_all_module_files)
 export(get_history)
+export(get_log)
 export(get_models)
 export(get_module_files)
 export(get_module_versions)
