feat: add `plot_history()`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ Suggests:
     mapview (>= 2.7.0),
     knitr,
     rmarkdown,
-    ggplot2,
+    ggplot2 (>= 3.0.0),
     gganimate (>= 1.0.0),
     DiagrammeR (>= 1.0.0),
     caret (>= 6.0.0),
@@ -49,6 +49,7 @@ Suggests:
     reactable,
     transformr (>= 0.1.0),
     patchwork (>= 1.0.0),
+    scales (>= 1.1.0),
     av,
     png,
     gifski,
