--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(is_scheduled)
 export(lookup_and_replace)
 export(normalise_derived_vars)
 export(omit_derived_vars)
+export(plot_history)
 export(pop_register)
 export(sample_choice)
 export(set_active_scenario)
