feat: add checkmate's style functions
See `check_entity()` and `check_entity_ids()`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,6 +92,7 @@ Collate:
     'World.R'
     'Zone.R'
     'alignment.R'
+    'checkmate.R'
     'checks.R'
     'constants.R'
     'create-world.R'
