--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,7 +40,11 @@ export(Zone)
 export(active_scenario)
 export(add_history)
 export(alignment)
+export(assert_entity)
+export(assert_entity_ids)
 export(assign_reference)
+export(check_entity)
+export(check_entity_ids)
 export(check_module)
 export(check_module_version)
 export(check_required_models)
@@ -52,6 +56,8 @@ export(dm_get_model)
 export(dm_save)
 export(download_module)
 export(element_wise_expand_lists)
+export(expect_entity)
+export(expect_entity_ids)
 export(get_all_module_files)
 export(get_history)
 export(get_log)
@@ -70,6 +76,8 @@ export(plot_history)
 export(pop_register)
 export(sample_choice)
 export(set_active_scenario)
+export(test_entity)
+export(test_entity_ids)
 export(trans)
 export(unnest_datatable)
 export(use_event)
