feat: add more checkmate functions
- check_required_model and check_transition_supported_model and their checkmate variants

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,11 +40,17 @@ export(Zone)
 export(active_scenario)
 export(add_history)
 export(alignment)
+export(assert_entity)
+export(assert_entity_ids)
+export(assert_required_models)
+export(assert_transition_supported_model)
 export(assign_reference)
+export(check_entity)
+export(check_entity_ids)
 export(check_module)
 export(check_module_version)
 export(check_required_models)
-export(check_supported_model)
+export(check_transition_supported_model)
 export(combine_histories)
 export(create_toy_population)
 export(create_toy_world)
@@ -52,6 +58,10 @@ export(dm_get_model)
 export(dm_save)
 export(download_module)
 export(element_wise_expand_lists)
+export(expect_entity)
+export(expect_entity_ids)
+export(expect_required_models)
+export(expect_transition_supported_model)
 export(get_all_module_files)
 export(get_history)
 export(get_log)
@@ -70,6 +80,10 @@ export(plot_history)
 export(pop_register)
 export(sample_choice)
 export(set_active_scenario)
+export(test_entity)
+export(test_entity_ids)
+export(test_required_models)
+export(test_transition_supported_model)
 export(trans)
 export(unnest_datatable)
 export(use_event)
