--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ export(is_scheduled)
 export(lookup_and_replace)
 export(normalise_derived_vars)
 export(omit_derived_vars)
+export(pick_models)
 export(plot_history)
 export(pop_register)
 export(sample_choice)
