--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ export(add_history)
 export(alignment)
 export(assert_entity)
 export(assert_entity_ids)
+export(assert_required_models)
+export(assert_transition_supported_model)
 export(assign_reference)
 export(check_entity)
 export(check_entity_ids)
@@ -58,6 +60,8 @@ export(download_module)
 export(element_wise_expand_lists)
 export(expect_entity)
 export(expect_entity_ids)
+export(expect_required_models)
+export(expect_transition_supported_model)
 export(get_all_module_files)
 export(get_history)
 export(get_log)
@@ -79,6 +83,8 @@ export(sample_choice)
 export(set_active_scenario)
 export(test_entity)
 export(test_entity_ids)
+export(test_required_models)
+export(test_transition_supported_model)
 export(trans)
 export(unnest_datatable)
 export(use_event)
