docs: update man and function documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(get_models)
 export(get_module_files)
 export(get_module_versions)
 export(get_modules)
+export(get_supported_models)
 export(household_formation)
 export(inspect)
 export(is_dymium_class)
