Added `plot_relationship` method to `Household`.
This uses `visNetwork` for plotting (added to Suggests). See #48 for its implementation detail.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,8 @@ Suggests:
     patchwork (>= 1.0.0),
     scales (>= 1.1.0),
     prettydoc,
-    ggthemes (>= 4.2.0)
+    ggthemes (>= 4.2.0),
+    visNetwork (>= 2.0.0)
 Roxygen: list(markdown = TRUE, r6 = FALSE)
 RoxygenNote: 7.0.2
 VignetteBuilder: knitr
