refactor: scenario functions
- moved all *_scenario functions into the same script
- renamed `use_scenario` to `create_scenario` and `active_scenario` to `get_active_scenario`.
- changed the inner working of `create_scenario` to make sure that it would work even if it is to be run outside a project folder.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -96,11 +96,11 @@ Collate:
     'household-formation.R'
     'module.R'
     'population-register.R'
+    'scenario.R'
     'usethis.R'
     'utils-class.R'
     'utils-event.R'
     'utils-pipeline.R'
-    'utils-scenario.R'
     'utils.R'
     'validate.R'
     'zzz.R'
