--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,6 @@ export(TransitionClassification)
 export(TransitionRegression)
 export(World)
 export(Zone)
-export(active_scenario)
 export(add_history)
 export(alignment)
 export(assert_entity)
@@ -51,6 +50,7 @@ export(check_module_version)
 export(check_required_models)
 export(check_transition_supported_model)
 export(combine_histories)
+export(create_scenario)
 export(create_toy_population)
 export(create_toy_world)
 export(dm_get_model)
@@ -61,6 +61,7 @@ export(expect_entity)
 export(expect_entity_ids)
 export(expect_required_models)
 export(expect_transition_supported_model)
+export(get_active_scenario)
 export(get_all_module_files)
 export(get_history)
 export(get_log)
@@ -90,7 +91,6 @@ export(unnest_datatable)
 export(use_event)
 export(use_module)
 export(use_module_readme)
-export(use_scenario)
 export(validate_linkages)
 import(R6)
 import(data.table)
