fix: checkmate::makeExpectation is missing
makeExpectation is imported to be used internally in our customised checkmate functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(Network)
 export(Pipeline)
 export(Population)
 export(SupportedTransitionModels)
+export(Target)
 export(Transition)
 export(TransitionClassification)
 export(TransitionRegression)
@@ -98,6 +99,8 @@ export(use_module_readme)
 export(validate_linkages)
 import(R6)
 import(data.table)
+importFrom(checkmate,makeExpectation)
+importFrom(checkmate,vname)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_li)
