feat: revamp the simulation clock
- use global option to store the clock time
- add functions to modify the clock
- `.dymium_options_msg()` shows the simulation time and every time during onload
- fix `get_active_scenario()` test to accept numeric due to the new clock time that get returned with the paths

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -90,6 +90,7 @@ Collate:
     'alignment.R'
     'checkmate.R'
     'checks.R'
+    'clock.R'
     'constants.R'
     'create-world.R'
     'data.R'
