--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(Network)
 export(Pipeline)
 export(Population)
 export(SupportedTransitionModels)
+export(Target)
 export(Transition)
 export(TransitionClassification)
 export(TransitionRegression)
@@ -41,6 +42,7 @@ export(alignment)
 export(assert_entity)
 export(assert_entity_ids)
 export(assert_required_models)
+export(assert_target)
 export(assert_transition_supported_model)
 export(assign_reference)
 export(check_entity)
@@ -48,6 +50,7 @@ export(check_entity_ids)
 export(check_module)
 export(check_module_version)
 export(check_required_models)
+export(check_target)
 export(check_transition_supported_model)
 export(combine_histories)
 export(create_scenario)
@@ -60,6 +63,7 @@ export(element_wise_expand_lists)
 export(expect_entity)
 export(expect_entity_ids)
 export(expect_required_models)
+export(expect_target)
 export(expect_transition_supported_model)
 export(get_active_scenario)
 export(get_all_module_files)
@@ -85,6 +89,7 @@ export(set_active_scenario)
 export(test_entity)
 export(test_entity_ids)
 export(test_required_models)
+export(test_target)
 export(test_transition_supported_model)
 export(trans)
 export(unnest_datatable)
@@ -94,6 +99,8 @@ export(use_module_readme)
 export(validate_linkages)
 import(R6)
 import(data.table)
+importFrom(checkmate,makeExpectation)
+importFrom(checkmate,vname)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_li)
