feat: another implementation of lookup_and_replace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(inspect)
 export(is_dymium_class)
 export(is_scheduled)
 export(lookup_and_replace)
+export(lookup_and_replace2)
 export(normalise_derived_vars)
 export(omit_derived_vars)
 export(pick_models)
