feat: `register()` assigns new ids to data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(omit_derived_vars)
 export(pick_models)
 export(plot_history)
 export(pop_register)
+export(register)
 export(sample_choice)
 export(set_active_scenario)
 export(test_entity)
