--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(alignment)
 export(assert_entity)
 export(assert_entity_ids)
 export(assert_required_models)
+export(assert_subset2)
 export(assert_target)
 export(assert_transition_supported_model)
 export(assign_reference)
@@ -50,6 +51,7 @@ export(check_entity_ids)
 export(check_module)
 export(check_module_version)
 export(check_required_models)
+export(check_subset2)
 export(check_target)
 export(check_transition_supported_model)
 export(combine_histories)
@@ -63,6 +65,7 @@ export(element_wise_expand_lists)
 export(expect_entity)
 export(expect_entity_ids)
 export(expect_required_models)
+export(expect_subset2)
 export(expect_target)
 export(expect_transition_supported_model)
 export(get_active_scenario)
@@ -91,6 +94,7 @@ export(set_active_scenario)
 export(test_entity)
 export(test_entity_ids)
 export(test_required_models)
+export(test_subset2)
 export(test_target)
 export(test_transition_supported_model)
 export(trans)
